syntax = "proto3";

package postspb;

option go_package = "/postspb";


// Post

message Post {
    int32 id = 1;
    int64 created_at = 2;
    int64 updated_at = 3;
    string url = 4;
    string caption = 5;
    int32 user_id = 6;
}

message CreatePostRequest {
    Post post = 1;
}

message CreatePostResponse {
    Post post = 1;
}

message GetPostRequest {
    int32 id = 1;
}

message GetPostResponse {
    Post post = 1;
}

message UpdatePostRequest {
    int32 post_id = 1;
    int64 updated_at = 2;
    string url = 3;
    string caption = 4;
}

message UpdatePostResponse {
    Post post = 1;
}

message DeletePostRequest {
    int32 id = 1;
}

message DeletePostResponse {
    Post post = 1;
}

message ListPostsRequest {

}

message ListPostsResponse {
    repeated Post post = 1;
}

message ListPostsByIdRequest {
    int32 id = 1;
}

message ListPostsByIdResponse {
    repeated Post post = 1;
}

message ListPostsByUserIdRequest {
    int32 user_id = 1;
}

message ListPostsByUserIdResponse {
    repeated Post post = 1;
}

service PostsService {
    rpc CreatePost (CreatePostRequest) returns (CreatePostResponse);
    rpc GetPost (GetPostRequest) returns (GetPostResponse);
    rpc UpdatePost (UpdatePostRequest) returns (UpdatePostResponse);
    rpc DeletePost (DeletePostRequest) returns (DeletePostResponse);
    rpc ListPosts (ListPostsRequest) returns (ListPostsResponse);
    rpc ListPostsById (ListPostsByIdRequest) returns (ListPostsByIdResponse);
    rpc ListPostsByUserId (ListPostsByUserIdRequest) returns (ListPostsByUserIdResponse);
}

